[tool.poetry]
name = "pyker"
version = "0.1.0"
description = "Python Poker Game"
authors = ["zodiacfireworks <martin.vuelta@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5"
bandit = "^1.6.2"
black = "^19.10b0"
codecov = "^2.0.16"
coverage = "^5.0.3"
flake8 = "^3.7.9"
flake8-black = "^0.1.1"
jupyterlab = "^2.0.0"
mypy = "^0.761"
pre-commit = "^2.1.1"
pydocstyle = "^5.0.2"
pylint = "^2.4.4"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
tox = "^3.14.5"
twine = "^3.1.1"
codacy-coverage = "^1.3.11"
nbstripout = "^0.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
